crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_multiple_validators.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/koruma.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Validators for the `", "value", "` field of [`", "MultiValidatorItem", "`]: [`",
    "NumberRangeValidation`], `[EvenNumberValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum MultiValidatorItemValueKorumaValidatorRef<'koruma> {
    NumberRangeValidation(&'koruma NumberRangeValidation),
    EvenNumberValidation(&'koruma EvenNumberValidation),
}
#[doc = concat!(
    "Validation errors for the `", "value", "` field of [`", "MultiValidatorItem",
    "`].\n\nValidators: [`", "NumberRangeValidation`], `[EvenNumberValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct MultiValidatorItemValueKorumaValidationError {
    number_range_validation: Option<NumberRangeValidation>,
    even_number_validation: Option<EvenNumberValidation>,
}
impl MultiValidatorItemValueKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "NumberRangeValidation", "` validator, if any."
    )]
    pub fn number_range_validation(&self) -> Option<&NumberRangeValidation> {
        self.number_range_validation.as_ref()
    }
    #[doc = concat!(
        "Returns the failed `", "EvenNumberValidation", "` validator, if any."
    )]
    pub fn even_number_validation(&self) -> Option<&EvenNumberValidation> {
        self.even_number_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "value", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = MultiValidatorItemValueKorumaValidatorRef<'_>> + '_ {
        [
            self
                .number_range_validation
                .as_ref()
                .map(MultiValidatorItemValueKorumaValidatorRef::NumberRangeValidation),
            self
                .even_number_validation
                .as_ref()
                .map(MultiValidatorItemValueKorumaValidatorRef::EvenNumberValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.number_range_validation.is_none() && self.even_number_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "MultiValidatorItem",
    "`].\n\nContains per-field error structs for ", "field: `value`", "."
)]
#[derive(Debug, Default)]
pub struct MultiValidatorItemKorumaValidationError {
    value: MultiValidatorItemValueKorumaValidationError,
}
impl MultiValidatorItemKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "value", "` field of [`",
        "MultiValidatorItem", "`]."
    )]
    pub fn value(&self) -> &MultiValidatorItemValueKorumaValidationError {
        &self.value
    }
}
impl ::koruma::ValidationError for MultiValidatorItemKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.value.is_empty()
    }
}
impl ::koruma::ValidationIssues for MultiValidatorItemKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.value.number_range_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "value",
                        ::core::any::type_name::<NumberRangeValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "NumberRangeValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        if self.value.even_number_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "value",
                        ::core::any::type_name::<EvenNumberValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "EvenNumberValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl MultiValidatorItem {
    #[doc = concat!(
        "Validates all fields of `", "MultiValidatorItem",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), MultiValidatorItemKorumaValidationError> {
        let mut error = MultiValidatorItemKorumaValidationError {
            value: MultiValidatorItemValueKorumaValidationError {
                number_range_validation: None,
                even_number_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.value;
        {
            let __koruma_builder = NumberRangeValidation::min(0).max(100);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                i32,
                NumberRangeValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<NumberRangeValidation as ::koruma::Validate<
                i32,
            >>::validate(&validator, __field_value) {
                error.value.number_range_validation = Some(validator);
                has_error = true;
            }
        }
        {
            let __koruma_builder = EvenNumberValidation::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                i32,
                EvenNumberValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<EvenNumberValidation as ::koruma::Validate<
                i32,
            >>::validate(&validator, __field_value) {
                error.value.even_number_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for MultiValidatorItem {
    type Error = MultiValidatorItemKorumaValidationError;
    fn validate(&self) -> Result<(), MultiValidatorItemKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for MultiValidatorItem {}
