crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_only_element_validators.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/optional_collection.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Element validators for the `", "values", "` field of [`", "Scores", "`]: [`",
    "RangeValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum ScoresValuesElementKorumaValidatorRef<'koruma> {
    RangeValidation(&'koruma RangeValidation<i32>),
}
#[doc = concat!(
    "Per-element validation errors for the `", "values", "` field of [`", "Scores", "`]."
)]
#[derive(Debug, Default)]
pub struct ScoresValuesElementKorumaValidationError {
    range_validation: Option<RangeValidation<i32>>,
}
impl ScoresValuesElementKorumaValidationError {
    #[doc = concat!("Returns the failed `", "RangeValidation", "` validator, if any.")]
    pub fn range_validation(&self) -> Option<&RangeValidation<i32>> {
        self.range_validation.as_ref()
    }
    #[doc = concat!("Returns all failed element validators for `", "values", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = ScoresValuesElementKorumaValidatorRef<'_>> + '_ {
        [
            self
                .range_validation
                .as_ref()
                .map(ScoresValuesElementKorumaValidatorRef::RangeValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for the `", "values", "` field of [`", "Scores",
    "`] (element validators only)."
)]
#[derive(Debug, Default)]
pub struct ScoresValuesKorumaValidationError {
    element_errors: Vec<(usize, ScoresValuesElementKorumaValidationError)>,
}
impl ScoresValuesKorumaValidationError {
    #[doc = concat!(
        "Returns all element validation errors for `", "values", "` of [`", "Scores",
        "`] with their indices."
    )]
    pub fn element_errors(
        &self,
    ) -> &[(usize, ScoresValuesElementKorumaValidationError)] {
        &self.element_errors
    }
    pub fn is_empty(&self) -> bool {
        self.element_errors.is_empty()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Scores", "`].\n\nContains per-field error structs for ",
    "field: `values`", "."
)]
#[derive(Debug, Default)]
pub struct ScoresKorumaValidationError {
    values: ScoresValuesKorumaValidationError,
}
impl ScoresKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "values", "` field of [`", "Scores", "`]."
    )]
    pub fn values(&self) -> &ScoresValuesKorumaValidationError {
        &self.values
    }
}
impl ::koruma::ValidationError for ScoresKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.values.is_empty()
    }
}
impl ::koruma::ValidationIssues for ScoresKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        for (__koruma_index, __koruma_element_error) in self.values.element_errors() {
            if __koruma_element_error.range_validation().is_some() {
                __koruma_issues
                    .push(
                        ::koruma::ValidationIssue::element(
                            "values",
                            *__koruma_index,
                            ::core::any::type_name::<RangeValidation<i32>>(),
                            None,
                            ::std::format!(
                                "validation failed for `{}`", "RangeValidation"
                            ),
                            ::std::vec::Vec::new(),
                        ),
                    );
            }
        }
        __koruma_issues
    }
}
impl Scores {
    #[doc = concat!(
        "Validates all fields of `", "Scores",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), ScoresKorumaValidationError> {
        let mut error = ScoresKorumaValidationError {
            values: ScoresValuesKorumaValidationError {
                element_errors: Vec::new(),
            },
        };
        let mut has_error = false;
        {
            ::koruma::__private::assert_each_collection_ref::<Vec<i32>, i32>();
        }
        for (idx, __item_value) in self.values.iter().enumerate() {
            let mut element_error = ScoresValuesElementKorumaValidationError {
                range_validation: None,
            };
            let mut element_has_error = false;
            {
                let __koruma_builder = RangeValidation::<i32>::min(0).max(100);
                ::koruma::__private::assert_element_validator_ready::<
                    _,
                    i32,
                    RangeValidation<i32>,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        __item_value,
                    ),
                );
                if !<RangeValidation<
                    i32,
                > as ::koruma::Validate<i32>>::validate(&validator, __item_value) {
                    element_error.range_validation = Some(validator);
                    element_has_error = true;
                }
            }
            if element_has_error {
                error.values.element_errors.push((idx, element_error));
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Scores {
    type Error = ScoresKorumaValidationError;
    fn validate(&self) -> Result<(), ScoresKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Scores {}
