crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_optional_field.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/optional_collection.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Validators for the `", "username", "` field of [`", "UserProfile", "`]: [`",
    "StringLengthValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum UserProfileUsernameKorumaValidatorRef<'koruma> {
    StringLengthValidation(&'koruma StringLengthValidation),
}
#[doc = concat!(
    "Validation errors for the `", "username", "` field of [`", "UserProfile",
    "`].\n\nValidators: [`", "StringLengthValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct UserProfileUsernameKorumaValidationError {
    string_length_validation: Option<StringLengthValidation>,
}
impl UserProfileUsernameKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "StringLengthValidation", "` validator, if any."
    )]
    pub fn string_length_validation(&self) -> Option<&StringLengthValidation> {
        self.string_length_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "username", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = UserProfileUsernameKorumaValidatorRef<'_>> + '_ {
        [
            self
                .string_length_validation
                .as_ref()
                .map(UserProfileUsernameKorumaValidatorRef::StringLengthValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.string_length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validators for the `", "bio", "` field of [`", "UserProfile", "`]: [`",
    "StringLengthValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum UserProfileBioKorumaValidatorRef<'koruma> {
    StringLengthValidation(&'koruma StringLengthValidation),
}
#[doc = concat!(
    "Validation errors for the `", "bio", "` field of [`", "UserProfile",
    "`].\n\nValidators: [`", "StringLengthValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct UserProfileBioKorumaValidationError {
    string_length_validation: Option<StringLengthValidation>,
}
impl UserProfileBioKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "StringLengthValidation", "` validator, if any."
    )]
    pub fn string_length_validation(&self) -> Option<&StringLengthValidation> {
        self.string_length_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "bio", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = UserProfileBioKorumaValidatorRef<'_>> + '_ {
        [
            self
                .string_length_validation
                .as_ref()
                .map(UserProfileBioKorumaValidatorRef::StringLengthValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.string_length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "UserProfile",
    "`].\n\nContains per-field error structs for ", "fields: `username`, `bio`", "."
)]
#[derive(Debug, Default)]
pub struct UserProfileKorumaValidationError {
    username: UserProfileUsernameKorumaValidationError,
    bio: UserProfileBioKorumaValidationError,
}
impl UserProfileKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "username", "` field of [`",
        "UserProfile", "`]."
    )]
    pub fn username(&self) -> &UserProfileUsernameKorumaValidationError {
        &self.username
    }
    #[doc = concat!(
        "Returns validation errors for the `", "bio", "` field of [`", "UserProfile",
        "`]."
    )]
    pub fn bio(&self) -> &UserProfileBioKorumaValidationError {
        &self.bio
    }
}
impl ::koruma::ValidationError for UserProfileKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.username.is_empty() && self.bio.is_empty()
    }
}
impl ::koruma::ValidationIssues for UserProfileKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.username.string_length_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "username",
                        ::core::any::type_name::<StringLengthValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "StringLengthValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        if self.bio.string_length_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "bio",
                        ::core::any::type_name::<StringLengthValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "StringLengthValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl UserProfile {
    #[doc = concat!(
        "Validates all fields of `", "UserProfile",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), UserProfileKorumaValidationError> {
        let mut error = UserProfileKorumaValidationError {
            username: UserProfileUsernameKorumaValidationError {
                string_length_validation: None,
            },
            bio: UserProfileBioKorumaValidationError {
                string_length_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.username;
        {
            let __koruma_builder = StringLengthValidation::min(1).max(50);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                String,
                StringLengthValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<StringLengthValidation as ::koruma::Validate<
                String,
            >>::validate(&validator, __field_value) {
                error.username.string_length_validation = Some(validator);
                has_error = true;
            }
        }
        if let Some(ref __field_value) = self.bio {
            {
                let __koruma_builder = StringLengthValidation::min(1).max(200);
                ::koruma::__private::assert_field_validator_ready::<
                    _,
                    String,
                    StringLengthValidation,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        __field_value,
                    ),
                );
                if !<StringLengthValidation as ::koruma::Validate<
                    String,
                >>::validate(&validator, __field_value) {
                    error.bio.string_length_validation = Some(validator);
                    has_error = true;
                }
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for UserProfile {
    type Error = UserProfileKorumaValidationError;
    fn validate(&self) -> Result<(), UserProfileKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for UserProfile {}
