crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_optional_with_generic.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/optional_collection.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Validators for the `", "score", "` field of [`", "Item", "`]: [`", "GenericRange",
    "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum ItemScoreKorumaValidatorRef<'koruma> {
    GenericRange(&'koruma GenericRange<i32>),
}
#[doc = concat!(
    "Validation errors for the `", "score", "` field of [`", "Item",
    "`].\n\nValidators: [`", "GenericRange", "`]."
)]
#[derive(Debug, Default)]
pub struct ItemScoreKorumaValidationError {
    generic_range: Option<GenericRange<i32>>,
}
impl ItemScoreKorumaValidationError {
    #[doc = concat!("Returns the failed `", "GenericRange", "` validator, if any.")]
    pub fn generic_range(&self) -> Option<&GenericRange<i32>> {
        self.generic_range.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "score", "`.")]
    pub fn all(&self) -> impl Iterator<Item = ItemScoreKorumaValidatorRef<'_>> + '_ {
        [self.generic_range.as_ref().map(ItemScoreKorumaValidatorRef::GenericRange)]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.generic_range.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Item", "`].\n\nContains per-field error structs for ",
    "field: `score`", "."
)]
#[derive(Debug, Default)]
pub struct ItemKorumaValidationError {
    score: ItemScoreKorumaValidationError,
}
impl ItemKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "score", "` field of [`", "Item", "`]."
    )]
    pub fn score(&self) -> &ItemScoreKorumaValidationError {
        &self.score
    }
}
impl ::koruma::ValidationError for ItemKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.score.is_empty()
    }
}
impl ::koruma::ValidationIssues for ItemKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.score.generic_range().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "score",
                        ::core::any::type_name::<GenericRange<i32>>(),
                        None,
                        ::std::format!("validation failed for `{}`", "GenericRange"),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl Item {
    #[doc = concat!(
        "Validates all fields of `", "Item",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        let mut error = ItemKorumaValidationError {
            score: ItemScoreKorumaValidationError {
                generic_range: None,
            },
        };
        let mut has_error = false;
        if let Some(ref __field_value) = self.score {
            {
                let __koruma_builder = GenericRange::<i32>::min(0).max(100);
                ::koruma::__private::assert_field_validator_ready::<
                    _,
                    i32,
                    GenericRange<i32>,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        __field_value,
                    ),
                );
                if !<GenericRange<
                    i32,
                > as ::koruma::Validate<i32>>::validate(&validator, __field_value) {
                    error.score.generic_range = Some(validator);
                    has_error = true;
                }
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Item {
    type Error = ItemKorumaValidationError;
    fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Item {}
